--- a/Lab3/package.json
+++ b/Lab3/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Q2Login",
+  "name": "Lab3",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -10,9 +10,11 @@
     "test": "jest"
   },
   "dependencies": {
-    "@react-navigation/native": "^6.1.18",
     "react": "18.3.1",
-    "react-native": "0.75.4"
+    "react-native": "0.75.4",
+    "react-native-paper": "^5.12.5",
+    "react-native-responsive-dimensions": "^3.1.1",
+    "react-native-safe-area-context": "^4.11.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
